policies/01-disallow-hostnetwork.yaml
---
# Source: kyverno/templates/01-disallow-hostnetwork.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-hostnetwork-sharing
spec:
  validationFailureAction: Enforce
  background: false
  rules:
  - name: validate-hostnetwork
    match:
      any:
      - resources:
          kinds:
            - Pod
    preconditions:
      any:
      - key: "{{ request.operation }}"
        operator: NotEquals
        value: DELETE
    exclude:
      resources:
        # Exclude namespaces which defined in the values defined under '.excludeNamespaces' 
        namespaces:
        - argocd-system
        - cert-manager
        - elastic-system
        - events-exporter
        - external-dns
        - gatekeeper-system
        - gitlab-runner
        - istio-*
        - jaeger-prod
        - kafka-system
        - keda
        - kube-*
        - kubecost
        - kubecost-mgmt
        - kyverno
        - kubecost
        - kubecost-*
        - logging
        - monitoring-prod
        - oauth2-proxy-system
        - path-router-operator-system
        - recut
        - elastic-dev
        - vault-system
        - velero-prod
        - k8ssandra-operator
        - temporal-operator
        - cloud-temporal-*
        - cassandra
        - cassandra-tls
        - temporal
        - data-kafka-*
        - shared-kafka-*
        - trivy-system-*
        - sentry-mgmt  
    validate:
      # The purpose of this ClusterPolicy rule to block key `hostNetwork` under spec field for any Pod  
      message: "Use of hostNetwork is not allowed"
      pattern:
        spec:
          =(hostNetwork): "false"
